objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copado__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within one sprint.</description>
        <inlineHelpText>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within</inlineHelpText>
        <label>Theme</label>
        <referenceTo>copado__Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Story_Points__c</fullName>
        <formula>copado__Story_Points_SFDC__c+copado__Story_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <description>Number of triggers without the minimum required coverage.</description>
        <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__US_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	),
	&apos;feature/&apos; + Name
)</formula>
        <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Enable_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoccmint__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__JIRA_key__c</fullName>
        <label>JIRA key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>Bundle_Stories</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Sprint__c</columns>
        <columns>copado__Environment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Environment__c</field>
            <operation>equals</operation>
            <value>Developer 1</value>
        </filters>
        <label>Bundle Stories</label>
    </listViews>
    <listViews>
        <fullName>User_Story_Reviewers_User_Story</fullName>
        <filterScope>Queue</filterScope>
        <label>User Story Reviewers</label>
        <queue>User_Story_Reviewers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Release__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Has_Apex_Code__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <columns>copado__Exclude_From_CBM__c</columns>
        <columns>copado__Stop_Indexing_Metadata__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>copado__Pull_Requests_Approved__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Exclude_From_CBM__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>copado__Stop_Indexing_Metadata__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>copado__Cli_Listview</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Cli Listview</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>true</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approved_pull_request_for_Pr_and_Depl</fullName>
        <active>false</active>
        <description>Check to make sure there is an approved pull request review before allowing promote and deploy checkbox</description>
        <errorConditionFormula>AND(copado__Pull_Requests_Approved__c = false,
OR( copado__Environment__r.Name = &apos;Developer 1&apos;,
  copado__Environment__r.Name = &apos;Developer 2&apos;),
AND(PRIORVALUE(copado__Promote_and_Deploy__c) = false,copado__Promote_and_Deploy__c = true))</errorConditionFormula>
        <errorMessage>There must be an approved pull request before deploying this user story. If you haven&apos;t already, please open a pull request for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancelling_a_child_user_story_bundled</fullName>
        <active>true</active>
        <description>Cancelling a child user story is not allowed.</description>
        <errorConditionFormula>NOT( ISBLANK( Bundle_User_Story__c ) )  &amp;&amp;   ISPICKVAL(copado__Status__c, &apos;Cancelled&apos;)</errorConditionFormula>
        <errorMessage>The user story status cannot be changed to Cancelled since it is part of a bundle and the bundle will continue moving the changes committed in this user story. You need to cancel the parent user story bundle first in order to cancel this user story.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_metadata_validation</fullName>
        <active>false</active>
        <description>AND(PRIORVALUE(copado__Promote_and_Deploy__c) = false,copado__Promote_and_Deploy__c = true))</description>
        <errorConditionFormula>AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true,
PRIORVALUE( copado__Promote_Change__c) = false, 
copado__Promote_Change__c = true, 
Change_Approved__c = false
)</errorConditionFormula>
        <errorMessage>Your change includes metadata that alters the opportunity object.  Changes must be approved before pushing forward.  Please submit approval request by clicking &quot;Submit for Approval&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Run_specified_tests_if_apex</fullName>
        <active>false</active>
        <description>Run specified tests must be selected before selecting &quot;Promote and Deploy&quot; or &quot;Ready to Promote&quot;</description>
        <errorConditionFormula>AND(
copado__Has_Apex_Code__c = true,
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
ISPICKVAL(copado__Promotion_Test_Level__c,&apos;RunSpecifiedTests&apos;)
)</errorConditionFormula>
        <errorMessage>Please update &quot;Promotion Test Level&quot; to &quot;Run Specified Tests&quot; before selecting &quot;Promote and Deploy&quot; or &quot;Ready to Promote&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Static_Code_Analysis_Results</fullName>
        <active>false</active>
        <description>This enforces any sort of conditions you may want on the Static Code Analysis results of a User Story (i.e. whether they have to be run and/or achieve certain results). What is written here is that the SCA Score cannot be blank or greater than zero.</description>
        <errorConditionFormula>AND(
copado__Has_Apex_Code__c = true,
OR( 
AND( 
PRIORVALUE(copado__Promote_Change__c) = false, 
copado__Promote_Change__c = true 
), 
AND( 
PRIORVALUE(copado__Promote_and_Deploy__c) = false, 
copado__Promote_and_Deploy__c = true 
) 
), 
OR( 
ISBLANK( SCA_Score__c ), 
SCA_Score__c &gt; 0 
) 
)</errorConditionFormula>
        <errorMessage>Static Code Analysis has either not been run or the SCA Score is too high.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Successful_Validation_Required</fullName>
        <active>false</active>
        <description>Before a user story can be promoted there must be a successful validation deployment.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( copado__Metadata_Types_in_Selection__c )), 
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
OR(
ISNULL(copado__Last_Validation_Deployment__c),
ISNULL(copado__Last_Validation_Deployment_Status__c),
ISBLANK(copado__Last_Validation_Deployment__c),
ISBLANK(copado__Last_Validation_Deployment_Status__c),
NOT(OR(CONTAINS(copado__Last_Validation_Deployment_Status__c, &quot;Validated&quot;),CONTAINS(copado__Last_Validation_Deployment_Status__c, &quot;Completed&quot;)))
)
)</errorConditionFormula>
        <errorMessage>Before a user story can be moved to the next environment, there must be a successful validation deployment.  Click on &quot;Validate Changes&quot; to validate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Uber_Approval_Process</fullName>
        <active>false</active>
        <description>Checks to make sure there is an approval before deployment</description>
        <errorConditionFormula>AND( NOT(ISBLANK( copado__Metadata_Types_in_Selection__c )),
Requires_Approval__c = true,
Change_Approved__c = false,
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
)
)</errorConditionFormula>
        <errorMessage>This change requires an approval.  Please wait until approval process is complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_must_own_org_credential</fullName>
        <active>false</active>
        <errorConditionFormula>$User.Id &lt;&gt;  copado__Org_Credential__r.OwnerId</errorConditionFormula>
        <errorMessage>You must own the org credential you are adding to the user story.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VA_Apex_Test_Coverage</fullName>
        <active>false</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
copado__Has_Apex_Code__c = true,
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
OR(
ISNULL(copado__Apex_Code_Coverage__c),
ISNULL(copado__Minimum_Apex_Code_Coverage__c),
copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
),
AND(
OR(
copado__Project__r.Name = &apos;CARMA&apos;,
copado__Project__r.Name = &apos;QMS (Quality Management System)&apos;,
copado__Project__r.Name = &apos;VHA Integrity&apos;,
copado__Project__r.Name = &apos;DMC VAMS&apos;,
copado__Project__r.Name = &apos;CLE-CCM&apos;,
copado__Project__r.Name = &apos;NVSPSE&apos;,
copado__Project__r.Name = &apos;CIS - Consolidated Internship Solution&apos;,
copado__Project__r.Name = &apos;ORH-NOMAD&apos;
)
)
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted. Run apex test tests from User Story.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>true</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Test_scratch_orgs_cannot_be_used_for_dev</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(copado__Org_Credential__r.copado__Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
        <errorDisplayField>copado__Org_Credential__c</errorDisplayField>
        <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
    </validationRules>
</CustomObject>